--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -2,28 +2,43 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  color:#333;
-  padding:20px 20px;
-  border:2px solid red;
+  color: #333;
+  padding: 20px 10px;
+  /* border:2px solid red; */
+  box-shadow: 0px 0px 70px #f87e5f;
 }
 
 .headerContainer .headerLeft {
-    display: flex;
-    align-items: center;
-    gap:10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .headerContainer .headerLeft img {
-    width:40px;
+  width: 40px;
 }
-.headerContainer a { 
-    text-decoration: none;
-    color:#333;
+
+.headerContainer .headerLeft h1 {
+  /* border:2px solid red; */
+  /* display: inline; */
+  color: #f59983;
+}
+.headerContainer a {
+  text-decoration: none;
+  color: #333;
 }
 
 .headerContainer .headerRight .rightPart {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap:10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+@media screen and (max-width: 480px) {
+  .headerContainer .headerRight .rightPart {
+    /* gap:4px; */
+    /* border:2px solid red; */
+    font-size: 2.75vw;
+  }
 }
