"style: Removed unused border"

--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -1,5 +1,5 @@
 .heroSection {
-  border: 2px solid red;
+  /* border: 2px solid red; */
   height: 300px;
   display: flex;
   align-items: center;
