--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -4,15 +4,22 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
+  flex-direction: column;
 }
 
+.heroSection .headingContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .heroSection h1 {
   text-transform: uppercase;
-  font-size: 5vw;
+  font-size: 8vw;
   color:#333;
 }
 
-.heroSection h1 span {
+.heroSection h1 {
   background: linear-gradient(
     270deg,
     #ff6a00,
@@ -33,6 +40,11 @@
   background-position: 0;
 }
 
+.heroSection span {
+    text-transform: capitalize;
+    font-weight:400;
+    padding-top:10px;
+}
 @keyframes animate-gradient {
   0% {
     background-position: 0% center;
@@ -46,7 +58,7 @@
 }
 @media screen and (max-width: 768px) {
   .heroSection h1 {
-    font-size: 5vw;
+    font-size: 7.5vw;
   }
 }
 
@@ -55,7 +67,22 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 20vh;
+    height: 300px;
     letter-spacing: 1.2px;
+    /* border:2px solid red; */
+  }
+
+  .heroSection .headingContainer {
+    flex-direction: column;
+  }
+
+  .heroSection h1 {
+    font-size: 60px;
+  }
+
+  .heroSection span {
+    font-size: 5vw;
+    color:#7a2626;
+    font-weight: 500;
   }
 }
