--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -12,7 +12,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-top: 100px;
+    gap:20px;
 }
+
 .heroSection h1 {
   text-transform: uppercase;
   font-size: 8vw;
@@ -42,8 +45,11 @@
 
 .heroSection span {
     text-transform: capitalize;
-    font-weight:400;
+    font-weight:500;
     padding-top:10px;
+    color:#a83c3c;
+    font-size: 32px;
+    /* border:2px solid red; */
 }
 @keyframes animate-gradient {
   0% {
@@ -84,5 +90,6 @@
     font-size: 5vw;
     color:#7a2626;
     font-weight: 500;
+
   }
 }
