--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -1,25 +1,26 @@
 .heroSection {
   /* border: 2px solid red; */
-  height: 300px;
+  height: 400px;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
   flex-direction: column;
+  /* border:2px solid red; */
 }
 
 .heroSection .headingContainer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-top: 100px;
-    gap:20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 30px;
+  gap: 20px;
 }
 
 .heroSection h1 {
   text-transform: uppercase;
   font-size: 8vw;
-  color:#333;
+  color: #333;
 }
 
 .heroSection h1 {
@@ -44,13 +45,52 @@
 }
 
 .heroSection span {
-    text-transform: capitalize;
-    font-weight:500;
-    padding-top:10px;
-    color:#a83c3c;
-    font-size: 32px;
-    /* border:2px solid red; */
+  text-transform: capitalize;
+  font-weight: 500;
+  padding-top: 10px;
+  color: #a83c3c;
+  font-size: 32px;
 }
+
+.imageContainer {
+  margin: 0 auto;
+  padding: 20px 0;
+  max-width: 1000px;
+  overflow: hidden;
+  display: flex;
+  border-radius: 150px;
+}
+
+.foodImages {
+  display: flex;
+  gap: 20px;
+  padding-right: 20px;
+  animation: scrolling 10s linear infinite;
+}
+
+.foodImages .food {
+  width: 200px;
+  height: 200px;
+  max-width: 100%;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.foodImages .food img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+@keyframes scrolling {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
 @keyframes animate-gradient {
   0% {
     background-position: 0% center;
@@ -88,8 +128,7 @@
 
   .heroSection span {
     font-size: 5vw;
-    color:#7a2626;
+    color: #7a2626;
     font-weight: 500;
-
   }
 }
