--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -5,6 +5,7 @@
   color: #333;
   padding: 20px 10px;
   /* border:2px solid red; */
+  background-color: #f7e2dd;
   box-shadow: 0px 0px 70px #f87e5f;
 }
 
