"style: Added responsiveness for max width of 768px"

--- a/src/Components/AboutUs.css
+++ b/src/Components/AboutUs.css
@@ -1,20 +1,17 @@
 .aboutContainer {
   overflow-x: hidden;
   margin: 75px 0;
-  /* margin-left: 50px; */
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 50px;
   margin-right: 0;
-  /* border:2px solid red; */
 }
 
 .aboutContainer .left1 {
   width: 30%;
   padding: 75px 0;
   padding-right: 90px;
-  /* border:2px solid red; */
 }
 
 .aboutContainer .left1 h1 {
@@ -24,6 +21,18 @@
   margin-bottom: 10px;
   letter-spacing: 1.2px;
   color: #6f0909;
+  position: relative;
+}
+
+.aboutContainer .left1 h1::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 50%;
+  height: 3px;
+  background-color: #6f0909;
+  border-radius: 50px;
 }
 
 .aboutContainer .left1 p {
@@ -62,7 +71,6 @@
   overflow: hidden;
   text-align: center;
   filter: drop-shadow(0px 0px 15px #6f0909);
-  /* border:2px solid red; */
 }
 
 .rightimageContainer {
@@ -70,9 +78,108 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  /* border:2px solid red; */
 }
 
 .rightimageContainer img {
   width: 100%;
+}
+
+@media screen and (max-width: 768px) {
+  .aboutContainer {
+    flex-direction: column;
+    margin: 0;
+    padding: 20px;
+    gap: 30px;
+  }
+
+  .aboutContainer .left1 {
+    width: 90%;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .aboutContainer .left1 h1 {
+    text-align: center;
+    font-size: 5vw;
+  }
+
+  .aboutContainer .left1 h1::after {
+    content: "";
+    background-color: #6f0909;
+    width: 60%;
+    height: 3px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: -5px;
+  }
+
+  .aboutContainer .left1 p {
+    text-align: center;
+    font-size: 22px;
+  }
+
+  .aboutContainer .left1 .para {
+    text-align: center;
+    font-size: 16px;
+    line-height: 1.6;
+  }
+
+  .aboutContainer .left1 button {
+    font-size: 18px;
+    padding: 8px 20px;
+  }
+
+  .aboutContainer .right1 {
+    width: 90%;
+    margin-bottom: 40px;
+  }
+
+  .rightimageContainer img {
+    width: 100%;
+    height: auto;
+  }
+}
+
+@media screen and (max-width: 468px) {
+  .aboutContainer {
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+  }
+
+  .aboutContainer .left1 {
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0;
+  }
+
+  .aboutContainer .left1 h1 {
+    text-align: center;
+    font-size: 24px;
+  }
+
+  .aboutContainer .left1 h1::after {
+    content: "";
+    background-color: #6f0909;
+    width: 100%;
+  }
+  .aboutContainer .left1 p {
+    text-align: center;
+  }
+
+  .aboutContainer .left1 .para {
+    text-align: center;
+  }
+
+  .aboutContainer .right1 {
+    width: 90%;
+    margin-bottom: 40px;
+  }
 }
