"feat: Added new reponsive component Working"

--- a/src/Components/Working.css
+++ b/src/Components/Working.css
@@ -1,23 +1,146 @@
 .workingContainer {
-    display:flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  max-width: 100%;
+  overflow:hidden;
 }
 
 .workingContainer h1 {
-    font-size: 6vw;
-    text-transform: uppercase;
-    color:#6f0909;
+  font-size: 6vw;
+  text-transform: uppercase;
+  color: #6f0909;
 }
 
-@media screen and (max-width:768px) {
-    .workingContainer h1 {
-        font-size: 8vw;
-    }
+.workingContainer .timeline {
+  /* border: 2px solid red; */
+  position: relative;
+  /* max-width: 1200px; */
+  /* margin: 100px auto; */
+  /* bordeR:2px solid red; */
 }
 
-@media screen and (max-width:480px) {
-    .workingContainer h1 {
-        font-size: 8vw;
-    }
+.workingContainer .timelineContainer {
+  padding: 15px;
+  position: relative;
+  width: 40%;
+  /* background: rgba(0, 0, 0, 0.3); */
+  animation: movedown 1s linear forwards;
+  opacity: 0;
+  border-radius: 8px;
+  /* background-color: #6f0909; */
+  /* background-color: #ecaf9f; */
+  box-shadow: 0 0 15px #6f0909;
+  /* opacity: 1; */
+
+  backdrop-filter: blur(10px);
+}
+
+.workingContainer .timelineContainer:nth-child(2) {
+  animation-delay: 1s;
+}
+.workingContainer .timelineContainer:nth-child(3) {
+  animation-delay: 2s;
+}
+.workingContainer .timelineContainer:nth-child(4) {
+  animation-delay: 3s;
+}
+.workingContainer .timelineContainer:nth-child(5) {
+  animation-delay: 4s;
+}
+
+@keyframes movedown {
+  0% {
+    opacity: 1;
+    transform: translateY(-30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
+.workingContainer .timeline .timelineContainer .textBox {
+  /* display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    width:2000px;
+    width:500px;
+    border:2px solid red; */
+  /* padding: 20px 30px; */
+  /* background: #fff; */
+  position: relative;
+  border-radius: 6px;
+  font-size: 15px;
+}
+
+.leftContainer {
+  left: 0;
+}
+
+.rightContainer {
+  left: 50%;
+}
+
+.timeline::after {
+  content: "";
+  position: absolute;
+  width: 6px;
+  height: 100%;
+  background: #ecaf9f;
+  background: #9a6262;
+  /* background-color: #6f0909; */
+  top: 0;
+  left: 48%;
+  margin-left: -3px;
+  animation: moveline 6s linear forwards;
+  border-radius: 50px;
+}
+
+.textBox h2 {
+  color: #6f0909;
+  letter-spacing: 1.1px;
+}
+
+.textBox p {
+  color: #333;
+  letter-spacing: 1.1px;
+}
+@keyframes moveline {
+  0% {
+    height: 0;
+  }
+  100% {
+    height: 100%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .workingContainer h1 {
+    font-size: 8vw;
+  }
+}
+
+@media screen and (max-width: 502px) {
+  .workingContainer h1 {
+    font-size: 8vw;
+  }
+
+  .leftContainer {
+    left: 5%;
+  }
+  .rightContainer {
+    left: 5%;
+    width: 100%;
+  }
+  .workingContainer .timeline::after {
+    left:4%;
+  }
+
+  .workingContainer .timelineContainer {
+    width:70%;
+    margin: 15px 25px;
+  }
 }
