"style: Added bottom margin"

--- a/src/Components/Working.css
+++ b/src/Components/Working.css
@@ -19,6 +19,7 @@
   /* max-width: 1200px; */
   /* margin: 100px auto; */
   /* bordeR:2px solid red; */
+  margin-bottom:20px;
 }
 
 .workingContainer .timelineContainer {
