--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,18 +1,24 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Playwrite+DK+Loopet:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Texturina:ital,opsz,wght@0,12..72,100..900;1,12..72,100..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Playwrite+DK+Loopet:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Texturina:ital,opsz,wght@0,12..72,100..900;1,12..72,100..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap");
 .headerContainer {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   color: #333;
   padding: 20px 10px;
   /* border:2px solid red; */
   background-color: #f7e2dd;
   box-shadow: 0px 0px 70px #f87e5f;
+  text-transform: uppercase;
 }
 
 .headerContainer .headerLeft {
   display: flex;
   align-items: center;
-  gap: 10px;
+  /* gap: 10px; */
+  /* border:2px solid red; */
+  justify-content: center;
 }
 
 .headerContainer .headerLeft img {
@@ -22,7 +28,13 @@
 .headerContainer .headerLeft h1 {
   /* border:2px solid red; */
   /* display: inline; */
-  color: #f59983;
+  color: #fd6b47;
+  font-style: italic;
+  text-align: center;
+  width: 100%;
+  font-size: 3.5vw;
+  font-family: "Playwrite DK Loopet", cursive;
+  font-family: "Dancing Script", cursive;
 }
 .headerContainer a {
   text-decoration: none;
@@ -41,5 +53,10 @@
     /* gap:4px; */
     /* border:2px solid red; */
     font-size: 2.75vw;
+  }
+
+  .headerContainer .headerLeft h1 {
+    font-weight: 700;
+    font-size: 8vw;
   }
 }
