--- a/src/Components/Recipes.css
+++ b/src/Components/Recipes.css
@@ -1,7 +1,7 @@
 .recipeContainer {
   border: 2px solid red;
   /* height:87dvh; */
-  width: 75%;
+  width: 85%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -30,15 +30,49 @@
   background-color: transparent;
   border: none;
   width: 40vw;
+  height: 40px;
+  border-radius: 40px;
+  font-size: 16px;
 }
 
+.containerLeft input::placeholder {
+  text-align: center;
+}
 .containerLeft img {
   width: 50px;
 }
 
 .containerRight {
-    display: flex;
-    align-items:center;
-    justify-content: center;
-    gap:15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  font-size: 18px;
+}
+
+@media screen and (max-width: 578px) {
+  .recipeContainer {
+    width: 98%;
+  }
+  .containerRight {
+    gap: 4px;
+    font-size: 3.25vw;
+  }
+
+  .containerLeft img {
+    width: 5vw;
+  }
+  .containerLeft input {
+    background-color: transparent;
+    border: none;
+    width: 40vw;
+    height: 40px;
+    border-radius: 40px;
+    font-size: 2.5vw;
+    letter-spacing: 1.1px;
+  }
+
+  .containerLeft input::placeholder {
+    font-size: 12px;
+  }
 }
