--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Playwrite+DK+Loopet:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Texturina:ital,opsz,wght@0,12..72,100..900;1,12..72,100..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap");
 
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Playwrite+DK+Loopet:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Texturina:ital,opsz,wght@0,12..72,100..900;1,12..72,100..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2&family=Carter+One&family=Chewy&family=Cinzel+Decorative&family=Cormorant+Garamond&family=Fredoka:wght@400;600&family=Merriweather&family=Montserrat:wght@400;600&family=Nunito:wght@400;600&family=Pacifico&family=Playfair+Display:wght@400;600&family=Poppins:wght@400;600;800&family=Quicksand:wght@400;600&family=Raleway:wght@400;600&display=swap');
+
 .headerContainer {
   display: flex;
   align-items: center;
@@ -29,13 +31,42 @@
   /* border:2px solid red; */
   /* display: inline; */
   color: #fd6b47;
-  font-style: italic;
+  /* font-style: italic; */
   text-align: center;
   width: 100%;
   font-size: 3.5vw;
-  font-family: "Playwrite DK Loopet", cursive;
-  font-family: "Dancing Script", cursive;
+  letter-spacing: 1.2px;
+  /* font-family: "Playwrite DK Loopet", cursive; */
+  /* font-family: "Dancing Script", cursive; */
+  /* font-family: "Playfair Display", serif; */
+  /* font-family: "Bebas Neue", cursive; */
+  /* font-family: 'Cinzel Decorative', serif; */
+  /* font-family: 'Cormorant Garamond', serif; */
+  /* font-family: 'Merriweather', serif;
+  font-family: 'Playfair Display', serif;
+  font-family: 'Poppins', sans-serif;
+  font-family: 'Montserrat', sans-serif; */
+  font-family: 'Nunito', sans-serif;
+  /* font-family: 'Quicksand', sans-serif;
+  font-family: 'Raleway', sans-serif; */
+  font-family: 'Fredoka', sans-serif;
+  /* font-family: 'Baloo 2', cursive; */
+  /* font-family: 'Chewy', cursive;
+  font-family: 'Carter One', cursive;
+  font-family: 'Pacifico', cursive; */
 }
+
+/* .logo-main {
+  font-family: "Bebas Neue", cursive;
+  color: #ff4500;
+}
+
+.logo-sub {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  color: #000;
+} */
+
 .headerContainer a {
   text-decoration: none;
   color: #333;
