--- a/src/Components/Recipes.css
+++ b/src/Components/Recipes.css
@@ -97,6 +97,41 @@
   /* padding: 20px 0px; */
 }
 
+.recipeContainer .recipeMiddleContainer .recipeMiddleLeft .buttonContainer {
+  border: 2px solid red;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 20px;
+}
+
+.recipeContainer
+  .recipeMiddleContainer
+  .recipeMiddleLeft
+  .buttonContainer
+  button {
+  background-color: transparent;
+  /* border: none; */
+  font-size: 16px;
+  /* color: #ec795c; */
+  background-color: rgb(248, 237, 229);
+  border: 2px solid #ec795c;
+  padding: 10px;
+  border-radius: 25px;
+  width: 100px;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+.recipeContainer
+  .recipeMiddleContainer
+  .recipeMiddleLeft
+  .buttonContainer
+  button:hover {
+  background-color: rgb(253, 231, 215);
+  box-shadow: 0 0 7px #ec795c;
+}
+
 .recipeContainer .recipeMiddleContainer .recipeMiddleLeft .recipeSection {
   display: flex;
   align-items: center;
