--- a/src/Components/Recipes.css
+++ b/src/Components/Recipes.css
@@ -104,6 +104,11 @@
   justify-content: space-between;
   padding: 10px 20px;
 }
+.likeContainer button {
+  background-color: transparent;
+  border: none;
+  font-size: 22px;
+}
 
 .recipeContainer
   .recipeMiddleContainer
