--- a/src/Components/Recipes.css
+++ b/src/Components/Recipes.css
@@ -79,6 +79,48 @@
   color: #ec795c;
 }
 
+.recipeContainer
+  .recipeHeadingContainer
+  .containerRight:hover
+  .bookmarksSection {
+  /* display: block; */
+}
+
+.bookmarkedVisible {
+  position: absolute;
+  right: 10px;
+  /* border: 2px solid red; */
+  width: 260px;
+  background-color: #e0e0df;
+  padding:20px;
+  border-radius: 10px;
+}
+
+.bookmarkedVisible p {
+  font-size: 12px;
+}
+
+.bookmarkedVisible .content {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.bookmarkedVisible .imgDiv {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  overflow: hidden;
+  /* border: 2px solid red; */
+}
+
+.bookmarkedVisible .imgDiv img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
 /* ******************************************* Middle Container below the recipeHeading Container *************************************** */
 .recipeContainer .recipeMiddleContainer {
   display: flex;
@@ -104,11 +146,12 @@
   justify-content: space-between;
   padding: 10px 20px;
 }
-.likeContainer button {
+
+/* .likeContainer button {
   background-color: transparent;
   border: none;
   font-size: 22px;
-}
+} */
 
 .recipeContainer
   .recipeMiddleContainer
@@ -295,6 +338,19 @@
 .plus,
 .minus {
   cursor: pointer;
+}
+
+.recipeContainer
+  .recipeMiddleContainer
+  .recipeMiddleRight
+  .sec-2
+  .secOuter
+  .likeContainer
+  button {
+  cursor: pointer;
+  background: transparent;
+  font-size: 22px;
+  border: none;
 }
 
 /* *************************************************** Section 3 of Middle Right Container ****************************************** */
