--- a/src/Components/Recipes.css
+++ b/src/Components/Recipes.css
@@ -86,13 +86,34 @@
   /* display: block; */
 }
 
+.bookmarksSection {
+  display: none;
+  position: absolute;
+  /* top: 100%; */
+  right: 0;
+  width: 250px;
+  /* background-color: white; */
+  /* box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15); */
+  /* z-index: 999; */
+  padding: 10px;
+  border-radius: 8px;
+}
+
+.bookmarkWrapper {
+  position: relative;
+}
+
+.bookmarkWrapper:hover .bookmarksSection {
+  display: block;
+}
+
 .bookmarkedVisible {
   position: absolute;
   right: 10px;
   /* border: 2px solid red; */
   width: 260px;
   background-color: #e0e0df;
-  padding:20px;
+  padding: 20px;
   border-radius: 10px;
 }
 
